force-app/src/objects/TR1__DaxtraSearchProperties__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TR1__Daxtra_Search_Call_List_Page__c</fullName>
        <label>Daxtra Search Call List Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Daxtra_Search_Criteria_Page_Height__c</fullName>
        <label>Daxtra Search Criteria Page Height</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Daxtra_Search_Criteria_Page__c</fullName>
        <label>Daxtra Search Criteria Page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Daxtra_Search_Default_Candidate_Status__c</fullName>
        <label>Default Candidate Status Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Daxtra_Search_Filter_Fields__c</fullName>
        <label>Daxtra Search Filter Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Daxtra_Search_Filters_Class__c</fullName>
        <label>Daxtra Search Filters Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Enhanced_Resume_Preview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Enhanced Resume Preview (Beta)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_Search_Result_Numbering__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this checkbox displays numbering on the search results based on Matching score</inlineHelpText>
        <label>Enable Search Result Numbering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Search_Results_Additional_Contact_Fields__c</fullName>
        <label>Search Results Additional Contact Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Search_Results_Default_Page_Size__c</fullName>
        <label>Search Results Default Page Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Search_Results_Default_Tab__c</fullName>
        <description>Allows to set default tab for the Search &amp; Match search results</description>
        <inlineHelpText>Allowed values:
resume
activities
collaboration
location
details
related_lists</inlineHelpText>
        <label>Search Results Default Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DaxtraSearch Properties</label>
</CustomObject>